术语表翻译完成

--- a/我再也不会把孩子送去学校/5.学校教育对学习内驱力的影响.md
+++ b/我再也不会把孩子送去学校/5.学校教育对学习内驱力的影响.md
@@ -60,7 +60,7 @@
 
 综上所述，我们不能指望自主学习总是用有用的知识来充实我们的头脑。社交媒体因八卦和琐事而繁荣。青少年和成年人都可能在 Facebook 上消磨数不清的时间，却找不到有用的东西。我们似乎从来不会对社交互动感到厌烦，手机里不停地传来各种各样的闲聊声，满足了我们对新奇事物的渴望。
 
-对于许多有天赋的孩子来说，[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)是他们腾飞所需要的。对于所有寻求有价值知识的孩子来说，通用的方法是，**在任何校正系统的引导下[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。**这个校正者可以是父母、老师或同龄人(包括年长的同龄人)。学习轨迹校正器需要**在[最佳推进区](https://supermemo.guru/wiki/Push_zone)**，以确保正确的学习轨迹而又不会扰乱系统。当然，没有比成熟的自我意识更好的校正者，只有一点自律。受过教育的成年人应该理解终身学习的必要性，并理解学习进步的正确方向。理想情况下，生活本身是学习轨迹的最佳校正器。
+对于许多有天赋的孩子来说，[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)是他们腾飞所需要的。对于所有寻求有价值知识的孩子来说，通用的方法是，**在任何校正系统的引导下[自我导向学习](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)。**这个校正者可以是父母、老师或同龄人(包括年长的同龄人)。学习轨迹校正器需要**在[最佳推动区](https://supermemo.guru/wiki/Push_zone)**，以确保正确的学习轨迹而又不会扰乱系统。当然，没有比成熟的自我意识更好的校正者，只有一点自律。受过教育的成年人应该理解终身学习的必要性，并理解学习进步的正确方向。理想情况下，生活本身是学习轨迹的最佳校正器。
 
 ## 5.6 上学热情
 
@@ -78,7 +78,7 @@
 >
 > 我所知道的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)中最强大的人工催化剂是[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)。SuperMemo 中的间隔重复往往会一遍又一遍地提到相同的旧材料。学习中的[水蛭](http://help.supermemo.org/wiki/Glossary:Leech)会毒害复习的乐趣。[渐进学习](https://supermemo.guru/wiki/Incremental_learning)使得新材料的流入与旧材料的复习交织在一起成为可能。[知识树](http://help.supermemo.org/wiki/Glossary:Knowledge_tree)的不断巩固为“未完成”的叶子提供了持续的增长。这些充当了新鲜事物的吸引者。在传统学习中，遗忘往往会瓦解知识结构，导致“树的表面”的渐进停滞。在[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)中，这个表面不断增加，在新奇发现方面提供了越来越大的潜力。如果你对学习的热情在下降，考虑[渐进学习](http://help.supermemo.org/wiki/Incremental_learning)。慢慢来！或者，励志读物也可以起到类似的作用。
 >
-> 如果你在学校遇到无聊或无法理解的话题，你可能需要忍受45分钟的无所作为。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可以在几秒钟内转换科目，改变优先顺序，重新安排学习时间，或者在最佳时间窗内忍受过度复杂的痛苦，希望获得一些知识成果（参见：[推进区](https://supermemo.guru/wiki/Push_zone)）。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可能会停留在舒适区，偶尔进入[推进区](https://supermemo.guru/wiki/Push_zone)，远离浪费时间的倒退区。今天看来太难的一个主题明天会变得容易。你永远不需要徒劳地忍受复杂。一旦你准备好了，你可以冒险进入同一个领域。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你使用你的学习内驱力作为强大的指导来优化你的选择。
+> 如果你在学校遇到无聊或无法理解的话题，你可能需要忍受45分钟的无所作为。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可以在几秒钟内转换科目，改变优先顺序，重新安排学习时间，或者在最佳时间窗内忍受过度复杂的痛苦，希望获得一些知识成果（参见：[推动区](https://supermemo.guru/wiki/Push_zone)）。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你可能会停留在舒适区，偶尔进入[推动区](https://supermemo.guru/wiki/Push_zone)，远离浪费时间的倒退区。今天看来太难的一个主题明天会变得容易。你永远不需要徒劳地忍受复杂。一旦你准备好了，你可以冒险进入同一个领域。在[渐进学习](https://supermemo.guru/wiki/Incremental_learning)中，你使用你的学习内驱力作为强大的指导来优化你的选择。
 >
 > > [渐进学习](https://supermemo.guru/wiki/Incremental_learning)是[学习内驱力](https://supermemo.guru/wiki/Learn_drive)最强大的催化剂
 
@@ -108,7 +108,7 @@
 >
 > 我一直在说「*弄清楚的越多，无知的边界就越长*」。我知道的越多，我就越知道我无知。了解自己的无知是学习的最好动力，我知道的越多，无知就越痛苦。遗忘也是一个原因。当我意识到即使是一个小学生也知道我不知道的事情时，我一直很生气。即使是 5 岁的孩子也能问出更好的问题。我认为，只要我保持扎实的心智能力，我的学习热情就会一直保持下去。
 >
-> 至于食物的味道，我不确定其中有多少被真正输入大脑，又有多少来自那类似的机制，就如在一个保守的大脑里的知识一般。柏林墙倒塌后，我第一次有机会品尝贻贝。我 28 岁。在那个年纪，我们应该已经失去了扩大自己口味范围的能力。当我吃第一口时，我非常肯定我会呕吐。感觉像是酷刑。我可以对自己说十几次「这只是健康的食物，很多人喜欢它，用你的理智，为什么要变得情绪化……」，这没有多大帮助。我好不容易吞下了几口，吃完后才松了一口气。然而，我没有放弃。我又试了一次。我试图去适应我的最佳推进区，这个推进区变得非常窄。如果我太努力或太早尝试，我将终生憎恨贻贝。如果我尝试得太晚了，我就会忘记我在第一次经历中学到的东西。我第二次吃贻贝时稍微放松了一点。尽管经历了很多痛苦，我还是在那里发现了一些美味。几个月后，我和那些在早期接触到贻贝的人一样喜欢贻贝。那次经历中没有什么新奇的东西。然而，我的口味已经改变了。今天，我喜欢贻贝。美味！我真的被剥夺了在食物方面寻求新奇的能力吗？不完全是，我喜欢尝试各种香料和香料组合。我的朋友昨天在泰国吃了一只蝎子，他快乐的表情引起了我的兴趣。如果我在泰国...
+> 至于食物的味道，我不确定其中有多少被真正输入大脑，又有多少来自那类似的机制，就如在一个保守的大脑里的知识一般。柏林墙倒塌后，我第一次有机会品尝贻贝。我 28 岁。在那个年纪，我们应该已经失去了扩大自己口味范围的能力。当我吃第一口时，我非常肯定我会呕吐。感觉像是酷刑。我可以对自己说十几次「这只是健康的食物，很多人喜欢它，用你的理智，为什么要变得情绪化……」，这没有多大帮助。我好不容易吞下了几口，吃完后才松了一口气。然而，我没有放弃。我又试了一次。我试图去适应我的最佳推动区，这个推动区变得非常窄。如果我太努力或太早尝试，我将终生憎恨贻贝。如果我尝试得太晚了，我就会忘记我在第一次经历中学到的东西。我第二次吃贻贝时稍微放松了一点。尽管经历了很多痛苦，我还是在那里发现了一些美味。几个月后，我和那些在早期接触到贻贝的人一样喜欢贻贝。那次经历中没有什么新奇的东西。然而，我的口味已经改变了。今天，我喜欢贻贝。美味！我真的被剥夺了在食物方面寻求新奇的能力吗？不完全是，我喜欢尝试各种香料和香料组合。我的朋友昨天在泰国吃了一只蝎子，他快乐的表情引起了我的兴趣。如果我在泰国...
 >
 > 至于无聊，我自己的职业生涯也受制于同样的饱和和无聊的机制。
 >
@@ -146,7 +146,7 @@
 
 - 回答孩子他们自己提出的问题的答案也可以抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)
 
-- 在最优[推进区](https://supermemo.guru/wiki/Push_zone)内的学习内驱力修正可以改善学习及其方向
+- 在最佳[推动区](https://supermemo.guru/wiki/Push_zone)内的学习内驱力修正可以改善学习及其方向
 
 - [渐进学习](https://supermemo.guru/wiki/Incremental_learning)是发展一个强大的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的最强工具
 
