--- a/我再也不会把孩子送去学校/6.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/6.Learn drive and reward.md
@@ -62,7 +62,7 @@
 
 如果你碰巧收听了广播新闻，并且听到「珍妮特·杰克逊生了一个孩子」，你的兴趣程度将取决于事件发生的概率。如果你不知道珍妮特·杰克逊是谁，这是一个高概率事件。如果[每天约有35万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
 
-如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到「*一生一次*」的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为「*不可能！*」。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最佳熵水平。只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
+如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到「*一生一次*」的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为「*不可能！*」。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最佳熵水平，只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
 
 如果你喜欢珍妮特式的八卦，那么这个八卦频道会给你带来恰到好处的意外。它将提供学习匹配。如果你缺乏相关知识或者你的优先级不同，你就会对它置之不理。你的学习重点也将决定你在特定领域的知识水平，以及你对任何特定渠道及其信息熵的反应。
 
@@ -80,7 +80,7 @@
 
 ## 6.8 检测意外
 
-人类的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是基于对[意外](https://en.wikipedia.org/wiki/Self-information)的检测。我们已经知道这一点很久了。人类和机器学习模型都以不同的名称涉及到这个概念。[Piaget](https://en.wikipedia.org/wiki/Jean_Piaget)写过，[图式](https://en.wikipedia.org/wiki/Jean_Piaget#Schema)在意外的影响下陷入失调。[Jeff_Hawki](https://en.wikipedia.org/wiki/Jeff_Hawkins)在他的新大脑皮层模型中谈到了基于学习和智力的预测错误。我喜欢谈论模型，以及它们的细化(当新数据适合模型时)，或者矛盾(当新数据需要改变模型时)。
+人类的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是基于对[意外](https://en.wikipedia.org/wiki/Self-information)的检测。我们已经知道这一点很久了。人类和机器学习模型都以不同的名称涉及到这个概念。[Piaget](https://en.wikipedia.org/wiki/Jean_Piaget) 写过，[图式](https://en.wikipedia.org/wiki/Jean_Piaget#Schema)在意外的影响下陷入失调。[Jeff_Hawki](https://en.wikipedia.org/wiki/Jeff_Hawkins) 在他的新大脑皮层模型中谈到了基于学习和智力的预测错误。我喜欢谈论模型，以及它们的细化(当新数据适合模型时)，或者矛盾(当新数据需要改变模型时)。
 
 为了获得学习的奖励，一个新的令人意外的信息需要与预先存在的知识(模型、图式、预测等等)相容。为了获得奖励，神经处理是必要的。关于输入的信息需要被处理，并与存储在大脑中的信息进行比较。大脑输入信息的主要处理器之一是海马体。大脑的信息交换台能够将输入与先前的知识进行比较。
 
@@ -88,23 +88,23 @@
 
 扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器(如海马)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用「[学习熵](https://supermemo.guru/wiki/learn entropy)」这个词来准确地描述信息渠道的吸引力。
 
-响应信号熵的前海马体因发现Halle •贝瑞神经元而闻名(见[更多](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html))。研究人员将电极植入一名同意接受治疗的癫痫患者体内，发现在不同情境下，单个神经元对 Halle Berry 图像的反应是一致的。同样的神经元也会对Halle Berry的名字做出反应。与此同时，后海马体对 Jennifer Aniston 的反应可能不那么一致(这可能是前一层神经处理的迹象)。
+响应信号熵的前海马体因发现 Halle Berry 神经元而闻名（见[更多](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html)）。研究人员将电极植入一名同意接受治疗的癫痫患者体内，发现在不同情境下，单个神经元对 Halle Berry 图像的反应是一致的。同样的神经元也会对  Halle Berry 的名字做出反应。与此同时，后海马体对 Jennifer Aniston 的反应可能不那么一致(这可能是前一层神经处理的迹象)。
 
 我们大多数人都不知道 Halle Berry 的气味如何，她的气味可能不足以激活海马体中的 Halle Berry 神经元，然而，即使是气味信号也可以通过嗅球、嗅结节、松果体皮层和内嗅皮层中的几个突触快速到达那里(见图)。然而，如果一个人能听到 Halle 的声音，声音信号可能会在嗅结节中出现，加强识别，并导致海马或更下方的新皮层中 Halle 神经元的激活。
 
 [![Olfactory system anatomy](https://supermemo.guru/images/thumb/0/04/Olfactory_system_anatomy.jpg/692px-Olfactory_system_anatomy.jpg)](https://supermemo.guru/wiki/File:Olfactory_system_anatomy.jpg)
 
-> **图**:*嗅觉系统解剖学。嗅觉信号可以通过嗅球、嗅结节、小齿轮状皮层和鼻内皮层的几个突触快速到达海马体。(来源:维基百科)*
+> **图**:*嗅觉系统解剖学。嗅觉信号可以通过嗅球、嗅结节、小齿轮状皮层和鼻内皮层的几个突触快速到达海马体。（来源：维基百科）*
 
 这是否意味着 Halle 会永久地存在于患者的海马体中？由于海马体与新记忆的形成有关，我们可能会认为 Halle 出现在海马神经元中是识别的结果。她在病人心中的永久位置可能位于新皮层的更深一层。我们现在知道，在记忆巩固的过程中，知识印记[从海马体转移到新皮层](http://www.jneurosci.org/content/29/32/10087.full)。我们也非常肯定这个过程是[在睡眠中](http://super-memory.com/articles/sleep.htm#Neural_optimization_in_sleep)发生的。正是在新皮层，我们应该寻找代表 Halle 或某人祖母的概念神经元。最后一种可能性产生了一种假设的神经元类型，称为[祖母神经元](https://en.wikipedia.org/wiki/Grandmother_cell)。
 
 在猴子身上，研究人员可以识别出视觉皮层中对面孔做出反应的[祖母神经元](https://en.wikipedia.org/wiki/Grandmother_cell)。在那里，我们可能会发现在看到Halle 的图像时神经元会更加稳定地激活。然而，Halle 的概念可能仍然存在于其他地方，并在注意到 Halle 时被视觉皮层细胞激活。
 
-另一个激活途径可能是从新闻上听到 Halle 的名字。整个识别过程将由内嗅皮层和海马体协调进行，而最终的Halle 神经元将在新皮层的某处激活。
+另一个激活途径可能是从新闻上听到 Halle 的名字。整个识别过程将由内嗅皮层和海马体协调进行，而最终的 Halle 神经元将在新皮层的某处激活。
 
 要让富含信息的信号产生奖励，必须有一个低概率事件在输入时被检测到，并通过联想将其编码为大脑皮层中的新知识。当前海马对熵做出反应时，[广泛的双侧丘脑皮层网络的活动会受到意外因素的调节]()。在那里，我们将寻找学习快乐的根源。根据消息的类型，还可能涉及其他比较器中枢。人们还发现，当检测到新的视觉信号时，杏仁体可能会产生奖励。对奖励视觉刺激做出反应的杏仁体神经元也可能对新的视觉刺激做出反应。[罗尔斯假设，这可能通过杏仁体来实现对新奇事物的奖励。](https://supermemo.guru/wiki/Amygdala_may_be_involved_in_rewarding_novel_input)
 
-我们知道海马体直接与伏隔核(大脑快乐中枢)相连。此连接可用于两种情况:
+我们知道海马体直接与伏隔核（大脑快乐中枢）相连。此连接可用于两种情况:
 
 1 .对快乐的预期
 2 .最终的奖励。
@@ -113,17 +113,17 @@
 
 ## 6.9 「哇！」因子
 
-1977年夏天，在寻找外星智能的时候，SETI的研究人员发现了一个来自[射手座](https://en.wikipedia.org/wiki/Sagittarius_(constellation))的不寻常的无线电信号。在宇宙空间微弱的低水平噪声中，信号是极不可能出现的。低概率标志着高意外。天文学家杰里·厄尔曼在打印输出上圈出6个与信号相对应的字母，并在旁边写上了"Wow!"(哇！)。
+1977年夏天，在寻找外星智能的时候，SETI 的研究人员发现了一个来自[射手座](https://en.wikipedia.org/wiki/Sagittarius_(constellation))的不寻常的无线电信号。在宇宙空间微弱的低水平噪声中，信号是极不可能出现的。低概率标志着高意外。天文学家杰里·厄尔曼在打印输出上圈出6个与信号相对应的字母，并在旁边写上了「Wow!」(哇！)。
 
 [![A scan of a color copy of the original computer printout, taken several years after the 1977 arrival of the Wow! signal](https://supermemo.guru/images/thumb/d/d3/Wow_signal.jpg/500px-Wow_signal.jpg)](https://supermemo.guru/wiki/File:Wow_signal.jpg)
 
-> **图**:*一张彩色电脑打印出来的原始拷贝扫描件，拍摄于1977年[哇!信号](https://en.wikipedia.org/wiki/Wow!_signal)。(来源:维基百科)*
+> **图**:*一张彩色电脑打印出来的原始拷贝扫描件，拍摄于1977年[哇!信号](https://en.wikipedia.org/wiki/Wow!_signal)。（来源：维基百科）*
 
-"Wow!" 是大脑对突然发现的反应。这一刻非常愉快。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的全部目的是在环境中寻找"Wow!" 因子。这些是最有价值的知识，补充了目前已知的:当前的现实模型。[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)的乐趣来自流入学生大脑的涌动的wows的力量。
+「Wow!」 是大脑对突然发现的反应。这一刻非常愉快。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的全部目的是在环境中寻找「Wow!」因子。这些是最有价值的知识，补充了目前已知的:当前的现实模型。[渐进阅读](https://supermemo.guru/wiki/Incremental_reading)的乐趣来自流入学生大脑的涌动的「wows」的力量。
 
-到目前为止，我们已经看到熵、意外、可预测性和预备知识对学习的影响。在这种情况下，只有信号的概率并不能完全解释它的力量。它的解释在本文的后面(参见:[知识评估网络]())。厄尔曼在写这篇文章的时候，能够感觉到它所蕴含的巨大意义。这是迄今为止，也是从那时起，证明除了人类文明以外，还有其他文明存在的最有力的证据。如果相同的信号出现在检测海洋中的沙丁鱼，就不会有"Wow!" 。即使在北极也不会有。
+到目前为止，我们已经看到熵、意外、可预测性和预备知识对学习的影响。在这种情况下，只有信号的概率并不能完全解释它的力量。它的解释在本文的后面（参见：[知识评估网络]()）。厄尔曼在写这篇文章的时候，能够感觉到它所蕴含的巨大意义。这是迄今为止，也是从那时起，证明除了人类文明以外，还有其他文明存在的最有力的证据。如果相同的信号出现在检测海洋中的沙丁鱼，就不会有「Wow!"」。即使在北极也不会有。
 
-信息渠道的可靠性很重要。如果错误率高，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)可能会减弱。当彭齐亚斯和威尔逊在1964年发现宇宙微波背景辐射时，并没有"Wow!" 。困惑的研究人员继续从他们的无线电天线上移除鸽子粪便。解释神秘噪音时，他们优先考虑了鸽子粪的原因。1978年，彭齐亚斯和威尔逊因为他们的发现获得了诺贝尔奖。
+信息渠道的可靠性很重要。如果错误率高，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)可能会减弱。当彭齐亚斯和威尔逊在1964年发现宇宙微波背景辐射时，并没有「Wow!"」。困惑的研究人员继续从他们的无线电天线上移除鸽子粪便。解释神秘噪音时，他们优先考虑了鸽子粪的原因。1978年，彭齐亚斯和威尔逊因为他们的发现获得了诺贝尔奖。
 
 当一个科学家有了一个发现，他可能会惊呼「尤里卡！」和手舞足蹈。他大脑中某个地方的神经网络产生了一种[概括](https://supermemo.guru/wiki/Generalization)，结果发出了奖励信号。这进一步传播，让一个老人像孩子一样在实验室里跳跃。
 
