--- a/我再也不会把孩子送去学校/22.Glossary.md
+++ b/我再也不会把孩子送去学校/22.Glossary.md
@@ -19,7 +19,7 @@
 - [Circadian cycle](https://supermemo.guru/wiki/Circadian_cycle) - ~24h cycle of changes in the state of body and mind
 - [昼夜周期](https://supermemo.guru/wiki/Circadian_cycle)——身心状态变化的24小时周期
 - [Circadian phase](https://supermemo.guru/wiki/Circadian_phase) - the time of day measured in hours since natural waking
-- [昼夜阶段](https://supermemo.guru/wiki/Circadian_phase)——一天中自然醒来后，以小时为单位测量的，时间
+- [昼夜相位](https://supermemo.guru/wiki/Circadian_phase)——一天中自然醒来后，以小时为单位测量的时间
 - [Circadian sleep propensity](https://supermemo.guru/wiki/Circadian_sleep_propensity) - sleepiness determined by the body clock
 - [昼夜睡眠倾向](https://supermemo.guru/wiki/Circadian_sleep_propensity)——由生物钟决定的睡意
 - [Childhood amnesia](https://supermemo.guru/wiki/Childhood_amnesia) - natural long-term memory deficit in children
@@ -77,33 +77,64 @@
 - [Knowledge redundancy](https://supermemo.guru/wiki/Knowledge_redundancy) - memorizing same memories in different contexts to boost [recall](https://supermemo.guru/wiki/Recall)
 - [知识冗余](https://supermemo.guru/wiki/Knowledge_redundancy)——在不同的情境中记忆相同的记忆，以促进[回忆](https://supermemo.guru/wiki/Recall)
 - [Knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network) - any neural subsystem capable of estimating the value of knowledge
+- [知识评估网络](https://supermemo.guru/wiki/Knowledge_valuation_network)——任何能够估计知识价值的神经子系统
 - [Memory complexity](https://supermemo.guru/wiki/Memory_complexity) - complexity of memory that determines how difficult it is to retain it
+- [记忆复杂度](https://supermemo.guru/wiki/Memory_complexity)——记忆的复杂性，决定了要记住这段记忆的困难程度
 - [Memory optimization](https://supermemo.guru/wiki/Memory_optimization_in_sleep) - process in which memories get better organized in sleep
+- [记忆优化](https://supermemo.guru/wiki/Memory_optimization_in_sleep)——记忆在睡眠中得到更好的组织的过程
 - [Minimum information principle](https://supermemo.guru/wiki/Minimum_information_principle) - claim that simple memories are easy to retain for longer
+- [最小信息原理](https://supermemo.guru/wiki/Minimum_information_principle)——声称简单的记忆容易保留更长的时间
 - [Natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle) - undisturbed sleep-wake cycle that maximizes creativity
+- [自然的创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)——不受干扰的最大限度地发挥创造力的睡眠-清醒周期
 - [Passive review](https://supermemo.guru/wiki/Passive_review) - undemanding processing of knowledge (e.g. reading as opposed to [active recall](https://supermemo.guru/wiki/Active_recall))
+- [被动复习](https://supermemo.guru/wiki/Passive_review)——对知识的简单加工（例如阅读而不是[主动回忆](https://supermemo.guru/wiki/Active_recall)）
 - [Pattern completion](https://supermemo.guru/wiki/Pattern_completion) - ability of a neural network to recognize incomplete input (e.g. a blurry picture)
+- [模式完成](https://supermemo.guru/wiki/Pattern_completion)——神经网络识别不完整输入（如模糊图片）的能力
 - [Permastore](https://supermemo.guru/wiki/Permastore) - everlasting memory
+- [永久记忆](https://supermemo.guru/wiki/Permastore)——永久的记忆
 - [Polyphasic sleep](https://supermemo.guru/wiki/Polyphasic_sleep) - unhealthy sleep practice in which sleep is dispersed in many small blocks throughout the day
+- [多相睡眠](https://supermemo.guru/wiki/Polyphasic_sleep)——不健康的睡眠实践，其中睡眠在一天中分散在许多小块
 - [Problem valuation network](https://supermemo.guru/wiki/Problem_valuation_network) - any neural subsystem capable of estimating the expected reward in problem solving
+- [问题评估网络](https://supermemo.guru/wiki/Problem_valuation_network)——任何能够估计问题解决过程中预期奖励的神经子系统。
 - [Push zone](https://supermemo.guru/wiki/Push_zone) - range of external pressure that may improve learning outcomes
+- [推动区](https://supermemo.guru/wiki/Push_zone)——可能改善学习效果的外部压力范围
 - [Priority queue](https://supermemo.guru/wiki/Priority_queue) - sequence of pieces of knowledge sorted by priority
+- [优先级队列](https://supermemo.guru/wiki/Priority_queue)——按优先级排序的知识片段序列
 - [Rational procrastination](https://supermemo.guru/wiki/Rational_procrastination) - strategic procrastination that affects jobs of lower priority
+- [理性拖延](https://supermemo.guru/wiki/Rational_procrastination)——影响优先级较低的工作的战略性拖延
 - [Redundancy](https://supermemo.guru/wiki/Redundancy) - extra load of knowledge that may add to its quality
+- [冗余](https://supermemo.guru/wiki/Redundancy)——可能会增加知识质量的额外知识负载
 - [Regress zone](https://supermemo.guru/wiki/Regress_zone) - range of external pressure that undermines learning outcomes
+- [倒退区](https://supermemo.guru/wiki/Regress_zone)——逐渐削弱学习效果的外部压力范围
 - [Retrievability](https://supermemo.guru/wiki/Retrievability) - probability of recall of a given memory
+- [可提取性](https://supermemo.guru/wiki/Retrievability)——对特定记忆的回忆概率
 - [Self-directed learning](https://supermemo.guru/wiki/Self-directed_learning) - self-learning in which materials and goals are determined by the student
+- [自我导向学习](https://supermemo.guru/wiki/Self-directed_learning)——由学生决定材料和目标的自学
 - [Self-learning](https://supermemo.guru/wiki/Self-learning) - learning on one's own (without a teacher)
+- [自学](https://supermemo.guru/wiki/Self-learning)——自己学习（没有老师）
 - [Sleep phase](https://supermemo.guru/wiki/Sleep_phase) - positioning of the preferred waking time (in clock hours)
+- [睡眠相位](https://supermemo.guru/wiki/Sleep_phase)—— 首选的醒来时间的定位（以时钟小时计）
 - [Spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) - learning technique that ensures long-term retention of knowledge
+- [间隔重复](https://supermemo.guru/wiki/Spaced_repetition)——确保知识长期记忆的学习技巧
 - [Spacing effect](https://supermemo.guru/wiki/Spacing_effect) - better memory effect of review delayed in time
+- [间隔效应](https://supermemo.guru/wiki/Spacing_effect)——延迟复习的记忆效果更好
 - [Spacing effect gain](https://supermemo.guru/wiki/Spacing_effect_gain) - mathematical definition of the [spacing effect](https://supermemo.guru/wiki/Spacing_effect)
+- [间隔效应增益](https://supermemo.guru/wiki/Spacing_effect_gain)——间隔效应的数学定义
 - [Stability](https://supermemo.guru/wiki/Stability) - durability of a given memory
+- [稳定性](https://supermemo.guru/wiki/Stability)——特定记忆的持久性
 - [Stabilization curve](https://supermemo.guru/wiki/Stabilization_curve) - the most important curve in the optimization of learning: [stabilization](https://supermemo.guru/wiki/Stabilization) as a function of [retrievability](https://supermemo.guru/wiki/Retrievability)
+- [稳定曲线](https://supermemo.guru/wiki/Stabilization_curve)——优化学习中的最重要的曲线：[稳定性](https://supermemo.guru/wiki/Stability)是[可提取性](https://supermemo.guru/wiki/Retrievability)的函数
 - [Stabilization decay](https://supermemo.guru/wiki/Stabilization_decay) - gradual decrease in the potential for [stability increase](https://supermemo.guru/wiki/Stability_increase) in memories with high [stability](https://supermemo.guru/wiki/Stability)
+- [稳定衰退](https://supermemo.guru/wiki/Stabilization_decay)——在[稳定性](https://supermemo.guru/wiki/Stability)较高的记忆中，其[稳定性增加](https://supermemo.guru/wiki/Stability_increase)的可能性逐渐降低
 - [Toxic memory](https://supermemo.guru/wiki/Toxic_memory) - persistent memory that leads to anxiety
+- [有毒记忆](https://supermemo.guru/wiki/Toxic_memory)——导致焦虑的顽固记忆
 - [Two-component model of long-term memory](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory) - model of memory based on [retrievability](https://supermemo.guru/wiki/Retrievability) and [stability](https://supermemo.guru/wiki/Stability) of memories
+- [长期记忆的双组件模型](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory)——基于记忆[可提取性](https://supermemo.guru/wiki/Retrievability)和[稳定性](https://supermemo.guru/wiki/Stability)的记忆模型
 - [Two-process model of sleep regulation](https://supermemo.guru/wiki/Two-process_model_of_sleep_regulation) - model that explains why and when we fall asleep
+- [睡眠调节的双过程模型](https://supermemo.guru/wiki/Two-process_model_of_sleep_regulation)——解释我们为什么和何时进入睡眠状态的模型
 - [Unschooling](https://supermemo.guru/wiki/Unschooling) - learning without the pressure of the curriculum
+- [非学校教育](https://supermemo.guru/wiki/Unschooling)——没有课程压力的学习
 - [Variable reward](https://supermemo.guru/wiki/Variable_reward) - intermittent reward that underlies gambling
+- [可变奖励](https://supermemo.guru/wiki/Variable_reward)——赌博背后的间歇性奖励
 - [War of the networks](https://supermemo.guru/wiki/War_of_the_networks) - contradictory signaling that may lead to the impairment in neural control
+- [网络战争](https://supermemo.guru/wiki/War_of_the_networks)——可能导致神经控制功能受损的矛盾信号
