--- a/我再也不会把孩子送去学校/5.学校教育对学习内驱力的影响.md
+++ b/我再也不会把孩子送去学校/5.学校教育对学习内驱力的影响.md
@@ -150,8 +150,8 @@
 
 - [渐进学习](https://supermemo.guru/wiki/Incremental_learning)是发展一个强大的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的最强工具
 
-- [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 使用不当会削弱[学习内驱力](https://supermemo.guru/wiki/Learn_drive)(其机制类似于学校教育)
+- [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 使用不当会削弱[学习内驱力](https://supermemo.guru/wiki/Learn_drive)（其机制类似于学校教育）
 
 - 在有利的条件下，[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和学习可以形成一个积极的反馈回路，使对学习的热爱最大化
 
-- 学校非常有效地摧毁了我上学的热情(在各个教育阶段)
+- 学校非常有效地摧毁了我上学的热情（在各个教育阶段）
