--- a/我再也不会把孩子送去学校/4.学习内驱力.md
+++ b/我再也不会把孩子送去学校/4.学习内驱力.md
@@ -14,7 +14,7 @@
 
 好奇心（curiosity）、猎奇（novelty seeking）、无聊易感性（boredom susceptibility）、经验开放性（openness to experience）、认知需求（need of cognition）和智力投入（intellectual engagement）等术语经常被用于不同的上下文中，以暗示学习内驱力的存在。它们要么是误导，要么意味着不同的东西。他们都有一个包袱，可能会使这个概念模糊不清。这包括几十年来在科学、流行用法、不恰当内涵等方面的分歧。
 
-描述学习内驱力所需的条件:
+描述学习内驱力所需的条件：
 
 - 学习内驱力是与生俱来的（即我们生来就有学习内驱力）
 - 学习内驱力是可以训练的（即可以通过学习来增强）
@@ -33,11 +33,11 @@
 
 **经验开放性**是一种性格特质。它也可以被定义为一种控制恐惧的能力，这种恐惧是由学习内驱力引发的探索所产生的。所有人都体会过学习内驱力，但有些人的学习内驱力会被情境的焦虑所抑制。
 
-**求知倾向**（Disposition to seek knowledge）是一个罕见的、从未被定义过的术语。一些专家比如[Lilian Katz博士](https://en.wikipedia.org/wiki/Lilian_Katz)有用过这个词。这个词很合适，但是它太长了，而且倾向远不如内驱力准确。内驱力更善于表达现象的本质。此外，knowledge seeking 是信息检索领域经常使用的一个术语。
+**求知倾向**（Disposition to seek knowledge）是一个罕见的、从未被定义过的术语。一些专家比如 [Lilian Katz 博士](https://en.wikipedia.org/wiki/Lilian_Katz)有用过这个词。这个词很合适，但是它太长了，而且倾向远不如内驱力准确。内驱力更善于表达现象的本质。此外，knowledge seeking 是信息检索领域经常使用的一个术语。
 
 正如名字所暗示的那样，**认知需求**的含义比学习内驱力更宽泛。下棋可以满足一个人的认知需求，但它无疑地不能满足学习内驱力。*认知需求*这个术语与好奇心的一个子概念重叠，后者被称为*智力好奇心*。这两种方法都不能精确地涵盖学习内驱力列出的条件。
 
-**猎奇**是心理学和行为科学中广泛应用的概念。它经常与好奇心混淆。然而，它的正确位置在于特质理论。猎奇与冲动、刺激或感觉追求相关。并且它被视为一种可能导致行为问题的特质。与此相反，学习内驱力是人类最纯粹的需求，它使我们成为发明家和发现者。猎奇是[克罗宁格人格模型](https://en.wikipedia.org/wiki/Temperament_and_Character_Inventory)的一部分。在一些性格测试中，它是外向性的一部分。它是遗传的，与多巴胺受体有关，它可能会把你送上珠穆朗玛峰。它可能与药物滥用有关。与 [D4 受体](https://en.wikipedia.org/wiki/Dopamine_receptor_D4)基因相关的形形色色的报告被解释为心理学家们对猎奇究竟是什么缺乏共识。学习内驱力是普遍的，是与生俱来的，但它也高度依赖于记忆的状态，即它是由经验塑造的。
+**猎奇**是心理学和行为科学中广泛应用的概念。它经常与好奇心混淆。然而，它的正确位置在于特质理论。猎奇与冲动、刺激或感觉追求相关。并且它被视为一种可能导致行为问题的特质。与此相反，学习内驱力是人类最纯粹的需求，它使我们成为发明家和发现者。猎奇是[ Cloninger 人格模型](https://en.wikipedia.org/wiki/Temperament_and_Character_Inventory)的一部分。在一些性格测试中，它是外向性的一部分。它是遗传的，与多巴胺受体有关，它可能会把你送上珠穆朗玛峰。它可能与药物滥用有关。与 [D4 受体](https://en.wikipedia.org/wiki/Dopamine_receptor_D4)基因相关的形形色色的报告被解释为心理学家们对猎奇究竟是什么缺乏共识。学习内驱力是普遍的，是与生俱来的，但它也高度依赖于记忆的状态，即它是由经验塑造的。
 
 ## 4.3 新奇和压力
 
@@ -51,7 +51,7 @@
 
 **无聊**现在可以被重新定义为缺乏学习内驱力系统的奖励。一个健康的大脑会抵制无聊，并将其视为一种惩罚。在学校里的孩子由于[习得性无助](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive)的机制逐渐习惯于忍受无聊。
 
-我将试图通过[我们对待新生儿和初学走路的孩子的方式](https://supermemo.guru/wiki/Baby_management)来展示我们是如何系统性地削弱学习内驱力的。我们继续采用低质量的日托，最终以义务教育的方式破坏学习内驱力。到了高中毕业的时候，学习内驱力往往已经完全被摧残而退化了。这往往被错误地归因于衰老过程，甚至被归咎于自然发展。这是一个危险的谎言。**学习内驱力可以为70多岁的老人提供和7岁孩子一样多的动力。**我来解释一下。
+我将试图通过[我们对待新生儿和初学走路的孩子的方式](https://supermemo.guru/wiki/Baby_management)来展示我们是如何系统性地削弱学习内驱力的。我们继续采用低质量的日托，最终以义务教育的方式破坏学习内驱力。到了高中毕业的时候，学习内驱力往往已经完全被摧残而退化了。这往往被错误地归因于衰老过程，甚至被归咎于自然发展。这是一个危险的谎言。**学习内驱力可以为70多岁的老人提供和7岁孩子一样多的动力。**我将解释学习内驱力是如何做到的。
 
 ## 4.5 延伸阅读
 
@@ -77,5 +77,5 @@
 
 - 学习内驱力不随着年龄的增长而衰退，它可以持续到健康的寿命结束
 
-- 学习内驱力的最佳增强方法是丰富的学习
+- 学习内驱力的最佳增强方法是饱满的学习
 
