--- a/我再也不会把孩子送去学校/6.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/6.Learn drive and reward.md
@@ -24,9 +24,9 @@
 
 信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))。它可以理解为由一个来源发送的信息的平均值。例如，假设一个频道连续不断地将一串相同的字母传送到无穷远处(例如，一串As :「AAA……」)中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
 
-[克劳德·香农](https://en.wikipedia.org/wiki/Claude_Shannon)在1948年提出了信息熵的概念。不久之后，科学家们开始假设信息渠道的熵是否会对大脑感知渠道价值的方式产生强大影响。1957年，[迈耶假设](https://supermemo.guru/wiki/Music_and_entropy)音乐的熵决定了人们对音乐之美的感知。他的结论是，较高的熵可能会导致主观紧张，这与更有意思的音乐片段有关。
+[Claude Shannon](https://en.wikipedia.org/wiki/Claude_Shannon) 在1948年提出了信息熵的概念。不久之后，科学家们开始假设信息渠道的熵是否会对大脑感知渠道价值的方式产生强大影响。1957年，[Meyer 假设](https://supermemo.guru/wiki/Music_and_entropy)音乐的熵决定了人们对音乐之美的感知。他的结论是，较高的熵可能会导致主观紧张，这与更有意思的音乐片段有关。
 
-迈耶的思想[后来被改进](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)，以更好地理解对音乐和普通信息的感知。音乐不仅仅是信息。这通过一个现象来看是很显然的，因为一首歌被多次回放可以令人愉快好多次。但是书籍很少出现这种情况。
+Meyer 的思想[后来被改进](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)，以更好地理解对音乐和普通信息的感知。音乐不仅仅是信息。这通过一个现象来看是很显然的，因为一首歌被多次回放可以令人愉快好多次。但是书籍很少出现这种情况。
 
 音乐是一种普遍的信息。如果你被允许选择一个无线频道，你会很快从嘈杂的静电干扰中调谐出来，你也不会对零熵的静音太兴奋。但是，大多数人会对有规律的鼓声做出积极的反应。只要它没有被敲打在碎玻璃上(这是我们天生不喜欢的)，我们就会发现一个有固定鼓点的广播频道比无声的更有趣。这自然只会持续一段时间，直到鼓点本身变得无聊和太容易预测。
 
@@ -70,9 +70,9 @@
 
 概率和复杂性不是信息感知的唯一组成部分。我们似乎在寻找可预测性和意外之间的平衡。我喜欢乡土爵士乐。在这种类型的音乐中，低音部通常是高度可预测的，伴着[最佳的切分音数量](https://supermemo.guru/wiki/Impact_of_syncopation_on_the_pleasure_of_music)。这使得身体运动与节奏同步变得容易。然而，如果没有意外，乡土爵士乐就不会有意思。在这里，复杂的爵士乐即兴表演会刺激负责检测「意外」的神经系统。此外，经过几十年的学习，我的大脑有一个完整的信号数据库。可能有一个我认识并喜欢的伴唱歌手的声音。我的大脑已经准备好迎接乡土爵士乐了。
 
-我喜欢肯·罗宾逊关于创造力的讲座。在某种程度上，它们是高度可预测的。我完全同意罗宾逊，所以你可以说罗宾逊助长了我的证实性偏见。这很愉快。当人们与我们观点一致时，我们喜欢说「英雄所见略同」。但是，如果罗宾逊继续重复同样陈腔滥调，讲述学校如何扼杀创造力，他将失去吸引力。熵可以解释为平均预期[意外](https://en.wikipedia.org/wiki/Self-information)。罗宾逊的传授带来了很多意外。他可能会以不同的、不同寻常的创造性方式描绘相同的模型。因此，[大脑接收新的信息，产生概括，并确认现有的模型。](https://en.wikipedia.org/wiki/Self-information)从新的语境中得出的概括可以增强[知识的连贯性](https://supermemo.guru/wiki/Knowledge_coherence)。在基于已知模型的消息中，这是一种非常令人愉快的补充。
+我喜欢 Ken Robinson 关于创造力的讲座。在某种程度上，它们是高度可预测的。我完全同意 Robinson，所以你可以说 Robinson 助长了我的证实性偏见。这很愉快。当人们与我们观点一致时，我们喜欢说「英雄所见略同」。但是，如果 Robinson 继续重复同样陈腔滥调，讲述学校如何扼杀创造力，他将失去吸引力。熵可以解释为平均预期[意外](https://en.wikipedia.org/wiki/Self-information)。Robinson 的讲授带来了很多意外。他可能会以不同的、不同寻常的创造性方式描绘相同的模型。因此，[大脑接收新的信息，产生概括，并确认现有的模型。](https://en.wikipedia.org/wiki/Self-information)从新的语境中得出的概括可以增强[知识的连贯性](https://supermemo.guru/wiki/Knowledge_coherence)。在基于已知模型的消息中，这是一种非常令人愉快的补充。
 
-罗宾逊的讲座在可预测性和意外之间找到了很好的平衡。
+Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 最令人愉快的信息渠道将不断提供意外，证实现有的模型，并在新的语义分支中武装它们，在这些分支上可以建立新的知识。一个破坏现有模型的意外起初可能并不令人愉快，但可能会导致一场非常令人愉快的思维革命。
 
@@ -167,11 +167,11 @@
 
 所有促进大脑健康发展的策略也将促进饱满、高度个性化和高效的评估网络。这些都将成为[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的基础。所有教育工作者都同意，我们希望帮助孩子更好地掌控他们的情感生活，培养聪明、有创造力和知识渊博的大脑。
 
-教育系统的主要问题是一种千篇一律的方法，在这种方法中，所有的孩子都以流水线的方式接受相同的知识，而很少考虑有效学习的关键组成部分:[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。学习内驱力是一种完美的计算系统，它能将「大脑中代表知识的语义网络的当前状态」与「知识评估网络响应环境中可用信息而产生的当前输入」相匹配。如果这个孩子坚持要看 YouTube 上的视频，那么他自己的大脑就是最好的权威。所有干涉都会影响未来的独立性和创造性。
+教育系统的主要问题是一种千篇一律的方法，在这种方法中，所有的孩子都以流水线的方式接受相同的知识，而很少考虑有效学习的关键组成部分：[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。学习内驱力是一种完美的计算系统，它能将「大脑中代表知识的语义网络的当前状态」与「知识评估网络响应环境中可用信息而产生的当前输入」相匹配。如果这个孩子坚持要看 YouTube 上的视频，那么他自己的大脑就是最好的权威。所有干涉都会影响未来的独立性和创造性。
 
-虽然讲课老师可能会花45分钟给孩子灌输一长串符号，这些符号会产生低估值和可忽略不计的记忆，但是同一个孩子可以在3 - 5分钟内访问谷歌，识别出具有高价值的信息，并且容易编码终身保留。对于在这一过程中受过良好训练的孩子来说，在自学过程中获得知识的效率可能会提高一个数量级。当我说「数量级」时，我只是谦虚和保守。我不想遭到夸张的指责。我在本文其他地方列举了几个具体比较的例子(例如，[一个月内学习学校13年所教的知识](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling)，或者[在假期学习速度加快1600 %](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration) )。
+虽然讲课老师可能会花 45 分钟给孩子灌输一长串符号，这些符号会产生低估值和可忽略不计的记忆，但是同一个孩子可以在3 - 5分钟内访问谷歌，识别出具有高价值的信息，并且容易编码终身保留。对于在这一过程中受过良好训练的孩子来说，在自学过程中获得知识的效率可能会提高一个数量级。当我说「数量级」时，我只是谦虚和保守。我不想遭到夸张的指责。我在本文其他地方列举了几个具体比较的例子(例如，[一个月内学习学校13年所教的知识](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English!#Inefficiency_of_schooling)，或者[在假期学习速度加快1600 %](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Self-directed_acceleration) )。
 
-在我谈到知识的金块时，彼得·泰尔谈到了[幂律](https://supermemo.guru/wiki/Thiel_on_power_law)：经过磨练的一小部分核心技能可以带来指数级回报。
+在我谈到知识的金块时，Peter Thiel 谈到了[幂律](https://supermemo.guru/wiki/Thiel_on_power_law)：经过磨练的一小部分核心技能可以带来指数级回报。
 
 > **对学习的小投资**可以给个人生活和整个地球带来**巨大的变化**！
 
@@ -183,9 +183,9 @@
 >
 > 我有我自己鲜明的例子来说明评估网络在对抗教育系统方面的力量：
 >
-> 1985年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 * 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出:编程技能——&gt; SuperMemo ——&gt;更快的学习(在所有领域，包括电子或微积分)。我决心学习编程。我的学校决心阻止我(通过要求选修其他必修课程)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_(programming_language))。我不得不在做平时的功课的同时，在额外的时间里学习 Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时( 1986年)波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_(computer)) 的大型机上运行(从 1960 年开始，为在波兰的苏联集团生产)。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum) ( 1986年1月4日)，我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划(类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划)。不久之后，我也学会了 Pascal 。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal  技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
+> 1985年，我算出了发展长期记忆所需的知识复习最佳间隔的近似函数。这是就是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的诞生。最初，这个函数是用[笔和纸](http://www.super-memory.com/articles/paper.htm)来实现的。几个月后，我意识到这个系统非常强大。我知道我可以用电脑把它的力量翻倍。然而，我不知道有谁能根据我的函数来编写学习软件。那时候，波兰的所有程序员是要么是在大型机上写 Fortran 或 Cobol 的老家伙，要么是在使用 ZX 81、Commodore 64 或 ZX Spectrum 等微型计算机的越来越多的业余爱好者。我决定自己写这个程序。但是我没有编程技能。我是计算机科学的学生，我向老师寻求帮助。然而，我们唯一的编程课程是 Datapoint 汇编语言。这些技能对于玩玩寄存器得出 11 * 11 = 121非常有用。但我想学习一些对 SuperMemo 编程有用的东西。我的学校一直要求我学习计算电路的电阻，或者学习符号积分。我的知识评估网络产生了一个简单的输出:编程技能——&gt; SuperMemo ——&gt;更快的学习(在所有领域，包括电子或微积分)。我决心学习编程。我的学校决心阻止我(通过要求选修其他必修课程)。无奈之下，我报名了经济大学，该大学开设了算法语言课程。这门课程的重点是 [Pascal](https://en.wikipedia.org/wiki/Pascal_(programming_language))。我不得不在做平时的功课的同时，在额外的时间里学习 Pascal。那门课程不错，但我们都在学习理论。纸上谈兵。当时( 1986年)波兰大学里的个人电脑很少，大多数实用的应用都在名为 [Odra](https://en.wikipedia.org/wiki/Odra_(computer)) 的大型机上运行(从 1960 年开始，为在波兰的苏联集团生产)。当我终于得到了我的第一台电脑：[ZX Spectrum](https://en.wikipedia.org/wiki/ZX_Spectrum) ( 1986年1月4日)，我终于可以开始学习编程语言了。在电脑到来之前，我开始写我的第一个程序！在纸上。这是一个组织我一天的计划(类似 [SuperMemo](http://help.supermemo.org/wiki/Plan) 中的计划)。不久之后，我也学会了 Pascal。首先，我必须减少学校的不良影响，减轻课业负担。我和我的电路老师达成了协议。我会为他做一些高通滤波计算，这将是提高我 Pascal 技能的机会。这个程序花了很多小时来写，简直是浪费时间。这是糟糕学习的完美例子。我几乎不明白我自己的程序是如何工作的。然而，这仍然比仅仅学习图解要好。就编程而言，那段学习很好，我的技能提高了很多。
 >
-> 对那些不懂编程的人来说，很难用语言表达出来，但是大学课程和自己编程之间的知识价值差异相当于李子和木星之间的大小差异。当我的同学们在电子学和计量学方面苦于无聊的讲座时，我已经可创业了。我在学校什么也学不到。我可以在 Pascal 的课外课程中学到一点。然而，只有激情和明确目标支持的实用知识才是重要的。到了 1987 年 12 月，我的努力达到了顶峰，写下了第一版 SuperMemo ，这彻底改变了我的人生历程。我的导师 Zbigniew Kierzowski 博士的开明态度让我把我的硕士论文全部奉献给 SuperMemo 这个主题。80 岁生日快乐，Kierzkowski 教授 ！对于一个学生来说，在这个尺度上做出自己的决定，然后再加上论文是用英语写的，这是非常不寻常的。这一事实在今天并不罕见，但它涉及到1989年的一场大规模行政和战术斗争。
+> 对那些不懂编程的人来说，很难用语言表达出来，但是大学课程和自己编程之间的知识价值差异相当于李子和木星之间的大小差异。当我的同学们在电子学和计量学方面苦于无聊的讲座时，我已经可创业了。我在学校什么也学不到。我可以在 Pascal 的课外课程中学到一点。然而，只有激情和明确目标支持的实用知识才是重要的。到了 1987 年 12 月，我的努力达到了顶峰，写下了第一版 SuperMemo，这彻底改变了我的人生历程。我的导师 Zbigniew Kierzowski 博士的开明态度让我把我的硕士论文全部奉献给 SuperMemo 这个主题。80 岁生日快乐，Kierzkowski 教授 ！对于一个学生来说，在这个尺度上做出自己的决定，然后再加上论文是用英语写的，这是非常不寻常的。这一事实在今天并不罕见，但它涉及到1989年的一场大规模行政和战术斗争。
 >
 > 我的学校差点毁了 [SuperMemo](https://supermemo.guru/wiki/SuperMemo)，它是我现在快乐的主要来源。这里没有恶意。我的大部分大学老师都是了不起的人。但学校是一个系统，旨在通过严格的课程来挤压学生，而不是给他们创造表达的空间，然而创造表达的空间是教育的最好的基础。
 
@@ -221,7 +221,7 @@
 
 与基于平均值的[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))不同，学习熵更像是一个趋势平均数，最新的信息将比之前传授的信息具有更高的权重。此外，学习熵植根于支配[记忆巩固](https://supermemo.guru/wiki/Two_component_model_of_memory)的规律，包括[间隔效应](https://supermemo.guru/wiki/Spacing_effect)。
 
-一旦知识的金块填补了理解上的一个重要空白，枯燥的演讲的学习熵就会激增。学习熵的增加与决定知识估值的记忆[稳定性](https://supermemo.guru/wiki/Stability)轨迹的表达式成正比(包括[知识估值网络](https://supermemo.guru/wiki/Knowledge_valuation_network)中的下降轨迹)。随着时间的推移，金块的影响将逐渐减弱。这些令人愉快的发现的累积效应将决定在任何特定时段(例如在演讲期间)的学习熵的水平。
+一旦知识的金块填补了理解上的一个重要空白，枯燥的演讲的学习熵就会激增。学习熵的增加与决定知识估值的记忆[稳定性](https://supermemo.guru/wiki/Stability)曲线的表达式成正比（包括[知识估值网络](https://supermemo.guru/wiki/Knowledge_valuation_network)中的下降曲线）。随着时间的推移，金块的影响将逐渐减弱。这些令人愉快的发现的累积效应将决定在任何特定时段（例如在演讲期间）的学习熵的水平。
 
 以上表明，教育者可以影响学习熵，增强[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，并提高长期学习效果。灌输知识是一种糟糕的策略。提供答案应该是有选择性的，应该倾向于回答高度重要的抽象和普遍的问题。自主学习的自由探索是终身保持[学习内驱力](https://supermemo.guru/wiki/Learn_drive)和终身学习的最佳方案。
 
@@ -233,22 +233,23 @@
 
 在一个类似[遗忘](https://supermemo.guru/wiki/Forgetting_curve)的过程中，[学习熵](https://supermemo.guru/wiki/Forgetting_curve)的奖励的影响将随着时间的推移呈指数级下降。就像[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)复习一样，新的奖励将学习熵恢复到更高的水平。就像[间隔效应](https://supermemo.guru/wiki/Spacing_effect)一样，较长的休息时间可能会导致相同的信息有更多的奖励。
 
-在学习过程中，决定学习熵的奖励信号和决定回忆的巩固信号有很大的区别：一旦你学会了什么，在短时间内重复复习是没有意义的，一旦你把回忆的概率提高到100%，你可以在下次复习之前让时间流逝。学习熵的上限可能很难达到。如果你喜欢一场演讲，有一些歪曲的事实或讲授，你会更喜欢它。如果你只记住一段记忆，你不可能在短时间内用技巧更好地记住它。你可以使用助记技巧重新构建记忆并影响其持久性，但是一旦回忆概率达到100 %，记忆的最好的办法是让它闲置一段时间或在不同的上下文中使用它，这可能会导致开发新的记忆，从而与原来的一段记忆形成冗余连接。
+在学习过程中，决定学习熵的奖励信号和决定回忆的巩固信号有很大的区别：一旦你学会了什么，在短时间内重复复习是没有意义的，一旦你把回忆的概率提高到100%，你可以在下次复习之前让时间流逝。学习熵的上限可能很难达到。如果你喜欢一场演讲，有一些歪曲的事实或讲授，你会更喜欢它。如果你只记住一段记忆，你不可能在短时间内用技巧更好地记住它。你可以使用助记技巧重新构建记忆并影响其持久性，但是一旦回忆概率达到100%，记忆的最好的办法是让它闲置一段时间或在不同的上下文中使用它，这可能会导致开发新的记忆，从而与原来的一段记忆形成冗余连接。
 
-学习熵的消失是由于缺乏奖励信号。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的消失是一个[遗忘](https://supermemo.guru/wiki/Forgetting)的问题(包括因脑细胞丢失而遗忘)。
+学习熵的消失是由于缺乏奖励信号。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的消失是一个[遗忘](https://supermemo.guru/wiki/Forgetting)的问题（包括因部分脑细胞死亡而遗忘）。
 
-学习熵将以指数下降和收益递减的方式叠加在每个信息上。通过优化奖励信息的出现时机，我们可以将学习熵提高，使学习成为与食物、性、药物等奖励相同的最令人愉快的活动之一。如果你对此持怀疑态度，请回忆一下那些沉迷于电子游戏的玩家，他们可以在晚上饿着肚子玩游戏。[电子游戏](https://supermemo.guru/wiki/Videogames)可以劫持[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，并将其与赌博的奖励结合起来。赌博的奖励也可能受类似于学习熵的下降和提升规则的支配，然而，它们受制于[可变的奖励](https://supermemo.guru/wiki/Variable_reward)，这可能导致上瘾。重要的是要区分学习的乐趣和有害的上瘾(参见：[对学习的上瘾](https://supermemo.guru/wiki/Addiction_to_learning))。
+学习熵将以指数下降和收益递减的方式叠加在每个信息上。通过优化奖励信息的出现时机，我们可以将学习熵提高，使学习成为与食物、性、药物等奖励相同的最令人愉快的活动之一。如果你对此持怀疑态度，请回忆一下那些沉迷于电子游戏的玩家，他们可以在晚上饿着肚子玩游戏。[电子游戏](https://supermemo.guru/wiki/Videogames)可以劫持[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，并将其与赌博的奖励结合起来。赌博的奖励也可能受类似于学习熵的下降和提升规则的支配，然而，它们受制于[可变的奖励](https://supermemo.guru/wiki/Variable_reward)，这可能导致上瘾。重要的是要区分学习的乐趣和有害的上瘾（参见：[对学习的上瘾](https://supermemo.guru/wiki/Addiction_to_learning)）。
 
 学习熵将决定[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，但两者将以不同的规则来维持。学习内驱力依赖于知识，因此将受到[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)的影响。由于知识是一个网络，所以说学习内驱力的最佳激励可能是没有意义的。为了最大限度地提高学习内驱力，我们应该终身学习，尊重[自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)，并注意大脑的健康(即一般的健康)。
 
 ## 6.14 最佳信息传授
 
-在学校教育中，我们可以设想一个处于最佳[学习熵](https://supermemo.guru/wiki/learn entropy)水平的讲座，在这个讲座中一个学生不断地说「哇!哇!」她保持尽可能快地记笔记。但是，更常见的情况是，讲座会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
-如果最佳学习熵水平取决于学生，老师该如何最好地向课堂传授知识？有时候适合所有人的传授是不可能的。换句话说，这困难到需要天才的教学技能。对大多数老师来说，他们的传授使大多数孩子感到无聊或沮丧。
+在学校教育中，我们可以设想一个处于最佳[学习熵](https://supermemo.guru/wiki/learn entropy)水平的讲课，在这个讲课中一个学生不断地说「哇！哇！」她保持尽可能快地记笔记。但是，更常见的情况是，课堂会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
+
+如果最佳学习熵水平取决于学生，老师该如何最好地向全班学生传授知识？有时候适合所有人的传授是不可能的。换句话说，这困难到需要天才的教学技能。对大多数老师来说，他们的传授使大多数孩子感到无聊或沮丧。
 
 在课堂上，少数幸运儿可能会理解大部分信息。对于一小部分有天赋的人来说，这堂课可能没有带来多少新知识。对他们来说这很无聊。对于其他孩子来说，信息的复杂性超出了他们的理解水平。在这种情况下，如果他们试图理解，老师的讲课可能会令他们挫败。一个关于弦理论的讲课可能相当于一个随机打乱排列的英语单词序列的噪音。讲课是一种浪费时间的活动。诺贝尔奖得主[ Carl Wieman ](https://supermemo.guru/wiki/Carl_Wieman)把它比作[放血](https://supermemo.guru/wiki/Wieman:_Lectures_make_no_sense)。
 
-为了避免负学习熵带来的挫败感，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样「换台"」。孩子们会忽略来自老师的"静电噪音"，并收听到其他「频道」，这些频道有更合适的学习熵水平（例如桌下的手机上的Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的概括，就会被认为是显而易见或毫无关联的。
+为了避免负学习熵带来的挫败感，学生们会像你从我[前面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Prior_knowledge_in_information_seeking)提到的泰国频道换台一样「换台」。孩子们会忽略来自老师的「静电噪音」，并收听到其他「频道」，这些频道有更合适的学习熵水平（例如桌下的手机上的Facebook）。即使他们的理解能力很好，所传授的知识也可能无法与他们目前的知识互补。如果这些知识不能产生[高质量高价值](https://supermemo.guru/wiki/Knowledge_valuation_network)的概括，就会被认为是显而易见或毫无关联的。
 
 低学习熵，即使偶尔发生，也会让学生习惯性「换台」。一段时间后，学生们将「进化」一种过滤器，将教师当做一个零熵和零学习熵的无声广播频道。提高讲课质量将是徒劳的。老师在学生心中消失了！
 
@@ -270,37 +271,35 @@
 
 我感到惊讶的是，有这么多的资源浪费在寻找让孩子们在讲课期间保持兴趣的方法的研究上，而讲课显然只是一种糟糕的教育工具。眼神交流分析？参与分析？努力量化激情？所有的孩子都有了天生的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，我们的首要任务应该是确保我们不会破坏这种内驱力。对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)起主要破坏作用的是[强制灌输知识](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)。此外，还有许多社会经济因素使许多儿童即使在最好的环境下也不能茁壮成长。有些孩子永远不会表现出对学习的热情。在大多数情况下，这不是他们的错。只有一小部分孩子受到残疾、健康问题和不幸的遗传天赋的限制。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)随年龄增长呈指数衰减的主要原因是义务教育。被动的授课助长了这一过程。
 
-Naturally, there are lectures that work. [Khan Academy](https://supermemo.guru/wiki/Khan_Academy) is jam-packed with good examples. Even a spoken lecture with no slides can work. A TED talk on YouTube can be fun. It can satisfy the [learn drive](https://supermemo.guru/wiki/Learn_drive). [MOOCs](https://en.wikipedia.org/wiki/Massive_open_online_course) are founded on the principle that one rock-star teacher is better than thousands of rank-and-file teachers repeating the same mantra. You can learn a lot even if you are just a passive listener. There are conditions though: you need to be intensely curious about the subject, or you need to love the speaker, or both. **There is only one sure mechanism for ensuring the lecture is interesting: you need to choose it on your own!** This is just one more aspect of the need for self-directed learning.
+当然，有些授课是有效的。[可汗学院](https://supermemo.guru/wiki/Khan_Academy)里有很多很好的例子。即使是没有幻灯片的口头演讲也能起作用。YouTube上的TED演讲可能会很有趣。它能满足[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。[MOOC](https://en.wikipedia.org/wiki/Massive_open_online_course) 是建立在这样一个原则之上的，即一位摇滚明星教师比数千名重复同样咒语的普通教师要好。即使你只是一个被动的倾听者，你也能学到很多东西。但是，也有一些条件：你需要对主题充满好奇，或者你需要喜欢这个演讲者，或者两者兼而有之。**只有一个确定的机制可以确保讲座是有趣的：你需要自己选择它！**这只是自我导向学习要求的又一个方面。
 
-当然，有些授课是有效的。可汗学院里有很多很好的例子。即使是没有幻灯片的口头演讲也能起作用。YouTube上的TED演讲可能会很有趣。它能满足学习的需要。MOOC是建立在这样一个原则之上的，即一位摇滚明星教师比数千名重复同样咒语的普通教师要好。即使你只是一个被动的倾听者，你也能学到很多东西。但是，也有一些条件：你需要对主题充满好奇，或者你需要喜欢这个演讲者，或者两者兼而有之。只有一个确定的机制可以确保讲座是有趣的：你需要自己选择它！这只是自我导向学习需求的又一个方面。
+除了选择之外，在讲课时，你绝对需要一个暂停按钮，以防你需要上厕所，或缓解饥饿感。没有什么比爆裂的膀胱更能有效地毁掉一场讲课了。最后但并非最不重要的一点是，大多数讲课都可以受益于 Netflix 的「跳过开头」（SkipIntro）功能。
 
-In addition to choice, in lecturing, you definitely need a pause button in case you need to take a toilet break, or quiet the hunger pangs. Nothing can ruin a lecture as effectively as a bursting bladder. Last but not least, most lectures could benefit from Netflix's Skip Intro feature.
+当然，如果你用你自己的创造性思维，甚至是快速的研究来提高讲课的效率，讲课就会发挥最好的作用。这就是为什么暂停一分钟或一天可能是学习效率的关键。与一些精神科医生的说法相反，创造性休息和走神与[多动症](https://supermemo.guru/wiki/ADHD)无关。只要它们是毫不相关的，它们就是高效学习的标志。
 
-Naturally, the lecture will work best if you enhance it with your own creative thinking or even quick research. This is why pausing for a minute, or for a day might be essential for learning efficiency. Against the claims of some psychiatrists, creative breaks and a wandering mind have nothing to do with [ADHD](https://supermemo.guru/wiki/ADHD). As long as they are remotely relevant, they are hallmarks of great learning.
+我使用两种方法来渐进地学习讲课。我的第一个方法是倾听和锻炼。锻炼可以提高注意力。良好的专注减少了暂停的需要，然而，它也减少了学习的创造性方面。对于优先级最高的主题，我使用[渐进视频](https://supermemo.guru/wiki/Incremental_video)，我可以在其中暂停和继续多次。我甚至可以把最重要的讲课节选留待将来复习。然而，即使是渐进视频也不是最好的学习方法。它不能在速度和数量上与[渐进阅读]()相竞争。有时，使用渐进阅读处理讲课记录比听讲课本身更有意义。这一点在充满陈述性知识的讲课中尤为明显。
 
-I use two methods for consuming lectures incrementally. My first method is to listen and exercise. Exercise improves focus. Good focus reduces the need for a pause, however, it also reduces the creative aspect of learning. For subjects of highest priority, I use [incremental video](https://supermemo.guru/wiki/Incremental_video) where I can pause and resume multiple times. I can even keep the most important lecture extracts for future review. However, even incremental video isn't the best approach to learning. It cannot compete in speed and volume with [incremental reading](https://supermemo.guru/wiki/Incremental_reading). Sometimes it makes better sense to employ incremental reading and process the lecture transcript than to listen to the lecture itself. This is particularly visible in fact-rich lecturing.
+我主要根据我喜欢听的演讲者来选择我的视频材料。在这篇文章的背景下，我知道你会喜欢 Ken Robinson 的演讲！去看看：[Ken Robinson：学校扼杀创造力](https://supermemo.guru/wiki/Robinson:_Schools_kill_creativity)！
 
-I choose my video materials mostly on the basis of speakers who I just love to listen to. In the context of this article, I know you would love Ken Robinson lectures! Go and see: [Robinson: Schools kill creativity](https://supermemo.guru/wiki/Robinson:_Schools_kill_creativity)!
+## 6.16 学习奖励
 
-## 6.16Learning rewards
+学习的乐趣可能是最令人满意的乐趣之一。与吃饭或做爱不同的是，学习的乐趣不会随着行为结束而终止。学习的乐趣是可持续的，只有在参与学习的网络过载的情况下，学习的乐趣才会慢慢减少。可以通过睡眠将其重置回基线。研究表明，学习的快乐与[海洛因或可卡因的快乐](https://supermemo.guru/wiki/Biederman_model)具有相同的机制。与吃或性不同的是，快乐的学习可以占据大部分醒着的时间。在这个意义上来说，学习、创造力、问题解决和生产力的乐趣可能是斯多葛派的享乐疗法的主要工具。虽然一个健康的人很容易满足对食物的需求，但是对学习的需求可能永远不会停止。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)取决于当前知识的状态，而这种状态可以被学习本身所操纵。
 
-The pleasure of learning might be one of the most satisfying possible pleasures. As opposed to eating or having sex, the pleasure of learning does not terminate with the act. The pleasure of learning is sustainable and wanes slowly only with the overload of networks involved in learning. It can be reset back to the baseline with sleep. The pleasure of learning has been shown to involve the same mechanisms as the [pleasure of heroin or cocaine](https://supermemo.guru/wiki/Biederman_model). Unlike feeding or sex, pleasurable learning can fill most of the waking time. In that sense, the pleasures of learning, creativity, problem solving, and productivity might be great tools in stoic hedonic therapy. Whereas the need for food is easily satisfied in a healthy individual, the need for learning may never end. The [learn drive](https://supermemo.guru/wiki/Learn_drive) depends on the status of current knowledge and this status can be manipulated with learning itself.
+> **所有情绪波动的人都应该把学习当作治疗。**
 
-**All people with mood swings should consider learning as therapy.**
+### 6.16.1 学习内驱力奖励
 
-### 6.16.1 Learn drive reward
+我已经提到了几个例子来说明[学习内驱力](https://supermemo.guru/wiki/Learn_drive)是如何在大脑中产生奖励信号的。我们知道低概率的信息是有奖励的。提供新知识的概括也是如此。一个导致理解突破的信息片段是很有价值的。[拼图中缺失的一块拼图](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor)带来了巨大的奖励。一个生僻的词，一旦被解码，就能使一整篇长的文本从杂乱无章的句子转换成清晰的推理。
 
-I have mentioned a couple of examples of how the [learn drive](https://supermemo.guru/wiki/Learn_drive) leads to a reward signal in the brain. We know that low probability information can be rewarding. So can a generalization that contributes new knowledge. A snippet of information that leads to a great goal of understanding is highly valued. A [missing piece in a jigsaw puzzle](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor) carries a great reward. One obscure word, once decoded, can make a whole long text switch from a tangle of sentences into a clear line of reasoning.
+通过概括来确认一个模型，或者为一个更好的新模型奠定基础，这两种方法都让人感觉很棒。此外，所有与强烈情感相关的模型验证肯定都会让人欣喜若狂：「*我的团队是世界上最好的！*」或「*是的！我的新生儿真的很健康！*」，或「*耶！我就知道努力工作会使我升职的！*」。然而，当我们讨论[学习内驱力](https://supermemo.guru/wiki/Learn_drive)时，我想过滤掉额外的可能会模糊图景的情绪层。我们需要记住，学习是愉快的，并与它是否能从运用知识中得到奖励无关。
 
-Confirming a model via a generalization or laying foundations for a new better model both feel great. In addition, all model confirmations associated with strong emotions can lead to euphoria: "*My team is the best in the world!*", or "*Yes! My newborn is healthy indeed!*", or "*Yeah! I knew that hard work will earn me that promotion!*". However, when discussing the [learn drive](https://supermemo.guru/wiki/Learn_drive), I would like to filter out that extra emotional layer that may obscure the picture. We need to remember that learning is pleasurable independent of whether it brings rewards from employing the knowledge.
+发现时的*啊哈！*、*哇！*、*或者尤里卡！*是学习中最纯粹、最终极的奖赏。它不需要从别人那里得到更多的赞扬或奖励。在这里，知识本身就是奖励。
 
-The *Aha!*, *Wow!* or *Eureka!* of discovery is the purest and ultimate prize in learning. It does not need to entail further reward in accolades or praise from others. Here, the knowledge is its own reward.
+这种奖励的共同点是对记忆中新的高价值信息进行编码。
 
-The common denominator of this reward is the encoding of new highly-valued information in memory.
+**学习内驱力的奖励来自准备长期储存的高价值知识。**
 
-**The learn drive reward comes from high-value knowledge ready for long-term storage.**
-
-In our quest to understand reality, while the total amount of information stored in the brain increases, the entropy of stored knowledge drops. **With learning and modeling, it takes less and less effort to understand the complexity of the world.**
+在我们寻求理解现实的过程中，随着大脑中储存的信息总量增加，储存的知识的熵就会下降。**随着不断学习和建模，理解世界的复杂性所需的努力越来越少。**
 
 ### 6.16.2 Evolution of the learn drive
 
