修复错误链接

--- a/我再也不会把孩子送去学校/6.Learn drive and reward.md
+++ b/我再也不会把孩子送去学校/6.Learn drive and reward.md
@@ -22,7 +22,7 @@
 
 你们可能从物理课回忆起熵是无序的度量，热力学第二定律表明孤立系统的熵永远不会减小。这是一种形象的物理定律，我们会终生铭记。这是[普遍适用的](https://supermemo.guru/wiki/Applicability)。
 
-信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))。它可以理解为由一个来源发送的信息的平均值。例如，假设一个频道连续不断地将一串相同的字母传送到无穷远处(例如，一串As :「AAA……」)中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
+信息论中有一个姊妹概念叫[香农熵](https://en.wikipedia.org/wiki/Entropy_(information_theory))。它可以理解为由一个来源发送的信息的平均值。例如，假设一个频道连续不断地将一串相同的字母传送到无穷远处(例如，一串 A :「AAA……」)中。这是完全可以预测的，并且熵为零。我们不会从这样的渠道学习。
 
 [Claude Shannon](https://en.wikipedia.org/wiki/Claude_Shannon) 在1948年提出了信息熵的概念。不久之后，科学家们开始假设信息渠道的熵是否会对大脑感知渠道价值的方式产生强大影响。1957年，[Meyer 假设](https://supermemo.guru/wiki/Music_and_entropy)音乐的熵决定了人们对音乐之美的感知。他的结论是，较高的熵可能会导致主观紧张，这与更有意思的音乐片段有关。
 
@@ -44,7 +44,7 @@ Meyer 的思想[后来被改进](https://supermemo.guru/wiki/Impact_of_syncopati
 
 请注意，实验中产生的视觉流证明[海马体对信号熵的反应](https://www.ncbi.nlm.nih.gov/pubmed/15896570)具有高度[象征性](https://supermemo.guru/wiki/Abstract_knowledge)。因此，视觉流在处理过程中丢失的信息会少得多。这一高度简化和[概念化](https://supermemo.guru/wiki/Generalization)的信息将会被扫描为意外，并为整个[学习内驱力](https://supermemo.guru/wiki/Learn_drive)系统提供指引。这就是为什么在这种情况下，海马体似乎对输入熵有反应。
 
-上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时「最佳熵」水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)。
+上面的推理解释了为什么低熵和高熵的感觉信号都是无趣的。经过一定程度的处理后，高熵信号可能会失去所有噪声，并向海马体传递低熵输入。然后，我们观察感官输入时「最佳熵」水平的错觉。我们需要一个新的概念，**学习熵**，来帮助我们准确地判断信号的吸引力。学习熵需要考虑信息的高度处理，然后才能激活大脑中的奖励中心。本文稍后将讨论[学习熵](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)。
 
 ## 6.5 信息处理速度
 
@@ -62,7 +62,7 @@ Meyer 的思想[后来被改进](https://supermemo.guru/wiki/Impact_of_syncopati
 
 如果你碰巧收听了广播新闻，并且听到「珍妮特·杰克逊生了一个孩子」，你的兴趣程度将取决于事件发生的概率。如果你不知道珍妮特·杰克逊是谁，这是一个高概率事件。如果[每天约有35万名女性分娩](http://www.theworldcounts.com/stories/How-Many-Babies-Are-Born-Each-Day)，这已经不是新闻，也不是新鲜事或有趣的事。一名士兵在战争中的第一次死亡将成为新闻，但是当死亡人数增加到成千上万时，年轻的生命将只是一个统计数字。
 
-如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到「*一生一次*」的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为「*不可能！*」。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最佳熵水平，只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#learn entropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
+如果你碰巧认识珍妮特·杰克逊或者喜欢她的音乐，那么生孩子的概率会急剧下降到「*一生一次*」的水平(对珍妮特来说)。这会让你变得有兴趣。然而，如果你记得珍妮特是古代情景喜剧中的一个漂亮女孩，她生孩子可能会被归为「*不可能！*」。如果你意识到珍妮特 50 岁了，并且你知道更年期，你可能会立刻对她的情况产生病态的好奇。你预备知识决定了你对信息的反应。信道没有最佳熵水平，只有最适合特定大脑的熵水平。在这一点上，你可能会看到，我们需要引入一个新的衍生概念，我们在[之后](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learntropy)将称之为**学习熵**。学习熵将决定一个特定的通道对一个特定的大脑的吸引力。
 
 如果你喜欢珍妮特式的八卦，那么这个八卦频道会给你带来恰到好处的意外。它将提供学习匹配。如果你缺乏相关知识或者你的优先级不同，你就会对它置之不理。你的学习重点也将决定你在特定领域的知识水平，以及你对任何特定渠道及其信息熵的反应。
 
@@ -86,7 +86,7 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 视觉流的熵的测量不一定是信息通道令人愉悦的能力的可靠指标。流向海马体的所有信息都经过高度处理。代表美丽海滩的像素流将被加工成一系列形状和纹理。反过来，这些模型将依次模拟棕榈树、沙子和大海。这种高度压缩的简单信息将决定对信息输入的最初响应。
 
-扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器(如海马)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用「[学习熵](https://supermemo.guru/wiki/learn entropy)」这个词来准确地描述信息渠道的吸引力。
+扫描环境中的信息如同扫描食物的气味。气味很诱人，但只有实际去吃才是真正的回报。这就是熵扫描不需要回报的原因。它所需要做的就是获得奖励。如前所述，前海马对熵有反应，然而实验设计确保熵是指输入过程中不会丢失太多信息的简单形状的组合。与其说是信号熵，不如说是信息比较器(如海马)的输入熵。重要的不是视网膜像素，而是比较器输入上表示的手掌形状。对于比较器来说，灰度或静态噪声的高熵模式与白度或静音没有区别。它们在输入时都会带来相同的熵:零。这就是为什么我用「[学习」这个词来准确地描述信息渠道的吸引力。
 
 响应信号熵的前海马体因发现 Halle Berry 神经元而闻名（见[更多](http://phys.org/news/2005-06-single-cell-recognition-halle-berry-neuron.html)）。研究人员将电极植入一名同意接受治疗的癫痫患者体内，发现在不同情境下，单个神经元对 Halle Berry 图像的反应是一致的。同样的神经元也会对  Halle Berry 的名字做出反应。与此同时，后海马体对 Jennifer Aniston 的反应可能不那么一致(这可能是前一层神经处理的迹象)。
 
@@ -109,7 +109,7 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 1 .对快乐的预期
 2 .最终的奖励。
 
-在预期检测到一个高[学习熵](https://supermemo.guru/wiki/learn entropy)信号后，就会产生对高价值信息的积极追求。海马体检测到一条信息后，可能会同时将相关的学习信息发送到大脑皮层，并向快乐中心发送奖励信号。这将意味着学习新东西的时刻！
+在预期检测到一个高[学习熵](https://supermemo.guru/wiki/learntropy)信号后，就会产生对高价值信息的积极追求。海马体检测到一条信息后，可能会同时将相关的学习信息发送到大脑皮层，并向快乐中心发送奖励信号。这将意味着学习新东西的时刻！
 
 ## 6.9 「哇！」因子
 
@@ -213,7 +213,7 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 好的学习是有奖励的。然而，也有不好的学习。因为这里有解码失败惩罚。如果一名学生努力解码一条信息，但失败了，他将受到惩罚。挫折就是这样产生的。这就是不喜欢学习的开始。如果学习熵低，奖励少，惩罚高，最终结果可能是负面的。如果我们把负面的奖励信号考虑在内，学习熵实际上可以为负值。无聊的讲座可能会带来负值的学习熵。这会导致抑制[学习内驱力](https://supermemo.guru/wiki/Learn_drive)。
 
-高知识估值导致高[学习熵](https://supermemo.guru/wiki/learn entropy)，而学习熵又为长期记忆知识的注意力和语义插入提供了必要条件。在强大的反馈循环中，**学习熵增强了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，这是决定学习熵的估值的基础。**这种反馈循环通过遗忘、习得性无助、衰老、伤害和精神资源的纯粹可用性来控制。通过合理的学习和生活方式管理，特别是[自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)，这种平衡可以在高[学习内驱力](https://supermemo.guru/wiki/Learn_drive)水平上保持几十年。
+高知识估值导致高[学习熵](https://supermemo.guru/wiki/learntropy)，而学习熵又为长期记忆知识的注意力和语义插入提供了必要条件。在强大的反馈循环中，**学习熵增强了[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，这是决定学习熵的估值的基础。**这种反馈循环通过遗忘、习得性无助、衰老、伤害和精神资源的纯粹可用性来控制。通过合理的学习和生活方式管理，特别是[自然创造力循环](https://supermemo.guru/wiki/Natural_creativity_cycle)，这种平衡可以在高[学习内驱力](https://supermemo.guru/wiki/Learn_drive)水平上保持几十年。
 
 ## 6.12 信息时机与学习熵
 
@@ -243,7 +243,7 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 ## 6.14 最佳信息传授
 
-在学校教育中，我们可以设想一个处于最佳[学习熵](https://supermemo.guru/wiki/learn entropy)水平的讲课，在这个讲课中一个学生不断地说「哇！哇！」她保持尽可能快地记笔记。但是，更常见的情况是，课堂会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
+在学校教育中，我们可以设想一个处于最佳[学习熵](https://supermemo.guru/wiki/learntropy)水平的讲课，在这个讲课中一个学生不断地说「哇！哇！」她保持尽可能快地记笔记。但是，更常见的情况是，课堂会发出一个高熵信息或让人感到无聊。它的学习熵会很低，甚至是负数。
 
 如果最佳学习熵水平取决于学生，老师该如何最好地向全班学生传授知识？有时候适合所有人的传授是不可能的。换句话说，这困难到需要天才的教学技能。对大多数老师来说，他们的传授使大多数孩子感到无聊或沮丧。
 
@@ -267,7 +267,7 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 我们喜欢学习，但我们通常讨厌别人教导我们。这些感觉与创造力相关，这可能可以用这样一个事实来解释：创造性的阐述对于[模式完成](https://supermemo.guru/wiki/Pattern_completion)是必不可少的，而模式完成正是理解的基础。
 
-在学习中，我们决定研究什么。[学习熵](https://supermemo.guru/wiki/learn entrop)的评估严格取决于大脑和当前的记忆激活的状态。在教学中，知识的传授是与我们对它的看法无关。许多学生把枯燥的科目列为他们不喜欢学校的首要原因。不是欺凌，不是压力，也不是早起。而是极度的无聊！我在[这里](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)写了关于自我导向学习和在学校学习之间的极大差异。这一切都源于[学习内驱力](https://supermemo.guru/wiki/Learn_drive)！
+在学习中，我们决定研究什么。[学习熵](https://supermemo.guru/wiki/learntropy)的评估严格取决于大脑和当前的记忆激活的状态。在教学中，知识的传授是与我们对它的看法无关。许多学生把枯燥的科目列为他们不喜欢学校的首要原因。不是欺凌，不是压力，也不是早起。而是极度的无聊！我在[这里](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning)写了关于自我导向学习和在学校学习之间的极大差异。这一切都源于[学习内驱力](https://supermemo.guru/wiki/Learn_drive)！
 
 我感到惊讶的是，有这么多的资源浪费在寻找让孩子们在讲课期间保持兴趣的方法的研究上，而讲课显然只是一种糟糕的教育工具。眼神交流分析？参与分析？努力量化激情？所有的孩子都有了天生的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，我们的首要任务应该是确保我们不会破坏这种内驱力。对[学习内驱力](https://supermemo.guru/wiki/Learn_drive)起主要破坏作用的是[强制灌输知识](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive)。此外，还有许多社会经济因素使许多儿童即使在最好的环境下也不能茁壮成长。有些孩子永远不会表现出对学习的热情。在大多数情况下，这不是他们的错。只有一小部分孩子受到残疾、健康问题和不幸的遗传天赋的限制。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)随年龄增长呈指数衰减的主要原因是义务教育。被动的授课助长了这一过程。
 
@@ -293,7 +293,7 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 通过概括来确认一个模型，或者为一个更好的新模型奠定基础，这两种方法都让人感觉很棒。此外，所有与强烈情感相关的模型验证肯定都会让人欣喜若狂：「*我的团队是世界上最好的！*」或「*是的！我的新生儿真的很健康！*」，或「*耶！我就知道努力工作会使我升职的！*」。然而，当我们讨论[学习内驱力](https://supermemo.guru/wiki/Learn_drive)时，我想过滤掉额外的可能会模糊图景的情绪层。我们需要记住，学习是愉快的，并与它是否能从运用知识中得到奖励无关。
 
-发现时的*啊哈！*、*哇！*、*或者尤里卡！*是学习中最纯粹、最终极的奖赏。它不需要从别人那里得到更多的赞扬或奖励。在这里，知识本身就是奖励。
+发现时的*啊哈！*、*哇！*、或者*尤里卡！*是学习中最纯粹、最终极的奖赏。它不需要从别人那里得到更多的赞扬或奖励。在这里，知识本身就是奖励。
 
 这种奖励的共同点是对记忆中新的高价值信息进行编码。
 
@@ -301,15 +301,15 @@ Robinson 的讲座在可预测性和意外之间找到了很好的平衡。
 
 在我们寻求理解现实的过程中，随着大脑中储存的信息总量增加，储存的知识的熵就会下降。**随着不断学习和建模，理解世界的复杂性所需的努力越来越少。**
 
-### 6.16.2 Evolution of the learn drive
+### 6.16.2 学习内驱力的进化
 
-Scientists say that smart animals play more. I say that it is even more interesting to note that species that play more are smarter. I hypothesize that the **learn drive may have been the trigger factor in the explosion of the human brain size**. It is not that birds or mammals faced a change in environment that required more thinking. It is not that humans suddenly faced extinction had they not blown up the size of their cortex. It may have been the emergence of the [learn drive](https://supermemo.guru/wiki/Learn_drive) that suddenly allowed better usage of the expensive increase in the number of brain cells. Before there was the [learn drive](https://supermemo.guru/wiki/Learn_drive), adding brain size might leave an animal with an extra head weight to carry and an extra set of cells to feed. Without the [learn drive](https://supermemo.guru/wiki/Learn_drive), the extra brain space might remain unused and likely undergo wasteful atrophy. If schooling attempts to override the [learn drive](https://supermemo.guru/wiki/Learn_drive), it will contribute to the disuse of that evolutionary advantage. It will contribute to society that is less smart and less creative.
+科学家说聪明的动物玩得更多。我说，更有趣的是，那些玩得更多的物种更聪明。我猜想，**人类大脑体积变大的触发因素可能是学习内驱力**，而不是鸟类或哺乳动物面临的环境变化需要更多的思考。这并不是说，如果人类大脑皮层没有变大，人类就会突然面临灭绝。这可能是因为[学习内驱力](https://supermemo.guru/wiki/Learn_drive)的出现，突然允许更好地使用数量增多的代价高昂的脑细胞。在[学习内驱力](https://supermemo.guru/wiki/Learn_drive)出现之前，增加大脑体积可能会给动物留下多余的头部重量和一组多余的细胞需要供养。如果没有[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，多余的大脑空间可能会被闲置，这很可能会导致浪费性萎缩。如果学校教育试图凌驾于[学习内驱力](https://supermemo.guru/wiki/Learn_drive)之上，它将有助于这种进化优势被废弃。学校教育将助长更不聪明、更没有创造力的社会。
 
-If we plot the brain size over the timeline of human evolution, we can see a powerful upswing around 2 million years ago. Paleoanthropologists tend to attribute that swing to better brain nutrients in the diet, [cooking](https://en.wikipedia.org/wiki/Catching_Fire:_How_Cooking_Made_Us_Human), and the like.
+如果我们在人类进化的时间线上画出大脑的大小，我们可以看到大约两百万年前的一个巨大的增加。古人类学家倾向于将这种转变归因于饮食、[烹饪](https://en.wikipedia.org/wiki/Catching_Fire:_How_Cooking_Made_Us_Human)等方面为大脑提供更好的营养。
 
-If the hypothesis on the emergence of the [learn drive](https://supermemo.guru/wiki/Learn_drive) is correct, *Homo habilis* would be a candidate for the starting point of the breakthrough. This could point to the transition from a simple procedural play drive of birds and mammals towards a more sophisticated declarative learn drive that ultimately leads us to building abstract models of reality, which underlie human intelligence. *Homo habilis* has also been hypothesized to lead to the emergence of [childhood dominated by brain growth](https://supermemo.guru/wiki/Homo_habilis:_the_emergence_of_childhood) (from weaning to an average of 7 years old).
+如果关于学习内驱力出现的猜想是正确的，那么*能人*就是这一突破的起点。这可能意味着从鸟类和哺乳动物简单的程序性游戏内驱力向更复杂的陈述性学习内驱力的转变，这种[学习内驱力](https://supermemo.guru/wiki/Learn_drive)最终导致我们建立现实的抽象模型，而这正是人类智能的基础。据推测，从*能人*开始，人类有了[以大脑发育为主的童年](https://supermemo.guru/wiki/Homo_habilis:_the_emergence_of_childhood)（从断奶到 7 岁左右）。
 
-The late arrival of the [learn drive](https://supermemo.guru/wiki/Learn_drive) in evolution would suggest that it is not a simple property emergent in neural networks (see: [Biederman model](https://supermemo.guru/wiki/Biederman_model)). Otherwise it might easily show up in fish or earlier. The [learn drive](https://supermemo.guru/wiki/Learn_drive) requires a dedicated set of neural structures that are able to send a reward signal at the point of detecting an incremental contribution to a coherent structure of declarative knowledge. This signal and the underlying structure might differ in procedural learning and declarative learning. It might also differ for different classes of sensory input.
+[学习内驱力](https://supermemo.guru/wiki/Learn_drive)在进化中的姗姗来迟表明，它不是神经网络中出现的简单功能（参见：[Biederman](https://supermemo.guru/wiki/Biederman_model) 模型）。否则，它可能很容易出现在鱼类或更早的时候。[学习内驱力](https://supermemo.guru/wiki/Learn_drive)需要一组专用的神经结构，这些神经结构能够在检测到对陈述性知识的连贯结构的增量贡献时，发送奖励信号。这种信号和潜在结构可能在程序性学习和陈述性学习中有所不同。对于不同类别的感官输入，它也可能有所不同。
 
 ### 6.16.3 Procedural learning reward
 
